# gnome-sound-recorder

./: .editorconfig  .eslintrc.yml  .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  README.md  configure.ac  gnome-sound-recorder.doap  meson.build  meson_options.txt  org.gnome.SoundRecorder.json
.gitlab/issue_templates/: Bug.md  Feature.md
build-aux/: meson_post_install.py
data/: application.css  meson.build  org.gnome.SoundRecorder.data.gresource.xml  org.gnome.SoundRecorder.desktop.in  org.gnome.SoundRecorder.desktop.in.in  org.gnome.SoundRecorder.gschema.xml.in
data/appdata/: Makefile.am  meson.build  org.gnome.SoundRecorder.appdata.xml.in  org.gnome.SoundRecorder.appdata.xml.in.in  org.gnome.SoundRecorder.metainfo.xml.in.in
data/icons/: Makefile.am
data/ui/: help-overlay.ui  infodialog.ui  main_window.ui  player.ui  preferences.ui  recorder.ui  recording_row.ui  recording_waveform_row.ui  row.ui  window.ui
po/: LINGUAS  POTFILES.in  af.po  be.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  lt.po  lv.po  ms.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  (+5 more)
src/: Makefile.am  application.js  audioProfile.js  encodingProfile.js  fileUtil.js  info.js  listview.js  main.js  mainWindow.js  meson.build  org.gnome.SoundRecorder.in  org.gnome.SoundRecorder.src.gresource.xml  org.gnome.SoundRecorder.src.gresource.xml.in  params.js  play.js  player.js  preferences.js  record.js  recorder.js  recorderWidget.js  recording.js  recordingList.js  recordingsListBox.js  recordingsManager.js  row.js  util.js  utils.js  waveform.js  window.js
